# visuallm

./: .gitignore  .pre-commit-config.yaml  LICENSE  MANIFEST.in  README.md  app.py  branch_README.md  mypy.ini  pyproject.toml  requirements.txt
.github/workflows/: autodoc-readme.yml  python-publish.yml  python-test.yaml
client_llm_generation/: .eslintrc.cjs  README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
client_llm_generation/src/: App.vue  main.ts
client_llm_generation/src/assets/: elementRegistry.ts  fetchPathsResolver.ts  formatter.ts  main.css  pollUntilSuccessLib.ts  reactiveData.ts
client_llm_generation/src/components/: Design_Loading.vue  DisplayChoicesSelector.vue  DisplayConnections.vue  DisplayLinksComponent.vue  DisplayMinMaxSelector.vue  DisplayPercentageComponent.vue  DisplayPlainTextComponent.vue  DisplaySampleSelector.vue  DisplaySoftmax.vue  DisplaySoftmaxComponent.vue  Element_BarChartSelect.vue  Element_PlainText.vue  Element_Selector.vue  Element_Tables.vue  LinkData.vue  MainContainerComponent.vue  NextTokenPrediction.vue  SubElement_BarCharSelect_Bar.vue  SubElement_Selector_MinMaxSelector.vue  Subelement_Selector_ChoicesSelector.vue  TableWithConnectionsComponent.vue
client_visuallm/: .env  README.md  package-lock.json  package.json  vite.config.ts
client_visuallm/src/: App.vue  FrontendComponent.vue  README.md  main.ts
client_visuallm/src/assets/: elementRegistry.ts  fetchPathsResolver.ts  heightMethods.ts  main.css  pollUntilSuccessLib.ts  reactiveData.ts  stringMethods.ts  utils.ts
client_visuallm/src/components/: Element_BarChartSelect.vue  Element_PlainText.vue  Element_Selector.vue  Element_Tables.vue  Element_TextInput.vue  MainContainerComponent.vue  SubElement_BarCharSelect_Bar.vue  SubElement_Selector_CheckBox.vue  SubElement_Selector_MinMaxSelector.vue  Subelement_Selector_ChoicesSelector.vue
client_visuallm/src/elements/: BarChartSelect.vue  Collapsible.vue  CollapsibleElement.vue  PlainText.vue  Selector.vue  Tables.vue  TextInput.vue
docs/: Communication.md  Deploy.md  ModuleSystem.md  callbacks_documentation.md
examples_py/: app.py  bar_chart_component_advanced.py  bar_chart_component_simple.py  dialogue_connections_example.py  next_token_prediction_example.py  really_easy_component_example.py  sampling_example.py  selector_component.py  simple_app.py  simple_component.py  table_component.py  text_input_component.py  two_tables_component.py
examples_py/alpaca_example/: README.md  app.py  create_app.py
examples_py/example_modules/: README.md  app.py  callbacks_documentation.md
examples_py/example_modules/components/: bar_chart_component_advanced.py  bar_chart_component_simple.py  collapsible_subcomponent.py  horizontal_multi_radio_component.py  reloadable_component.py  selector_change_subselectors.py  (+5 more)
examples_py/openai_example/: README.md  app.py
examples_py/persona_chat_example/: README.md  app.py  create_app.py
examples_py/simple_app/: README.md  app.py  simple_component.py
llm_generation_server/: component_base.py  dialogue_connections_component.py  next_token_prediction_component.py  plain_formatter.py  server.py  server_baseclass.py  server_exampleclass.py  softmax_formatter.py  table_formatter.py  table_visualize_mixin.py
llm_generation_server/components/: DialogueVisualizationComponent.py  GenerationComponent.py  NextTokenPredictionComponent.py
llm_generation_server/elements/: barchart_element.py  element_base.py  selector_element.py  selector_elements.py  table_element.py
llm_generation_server/formatters/: format.py  plain_formatter.py  sample_selector_formatter.py  softmax_formatter.py  table_formatter.py
server_llm_generation/: app.py  server_baseclass.py
tests/: conftest.py  firefox_test_base.py  port_utils.py  test_text_input_component.py  textInputComponentTests.py
tests/elements_tests/: custom_request_mixin.py  plain_text_element_test.py  selector_elements_test.py  text_input_element_test.py
tests/example_alpaca_tests/: conftest.py  test_can_be_run.py
tests/example_modules_app_tests/: conftest.py  test_barchart_component.py  test_collapsible.py  test_exception_component.py  test_horizontal_multi_radio_component.py  test_reloadable.py  test_selector_change_component.py  test_selector_component.py  test_tables_component.py  test_text_input_component.py
tests/example_openai_tests/: conftest.py  test_can_be_run.py
tests/example_personachat_tests/: chat_component_tests.py  conftest.py  test_can_be_run.py  test_chat_component.py  test_generation_component.py
tests/stubs/: generator_stub.py
visuallm/: __init__.py  component_base.py  named.py  server.py
visuallm/components/: ChatComponent.py  DatasetVisualizationComponent.py  GenerationComponent.py  NextTokenPredictionComponent.py  __init__.py  dataset_visualization_component.py  generation_component.py  next_token_prediction_component.py
visuallm/elements/: __init__.py  barchart_element.py  collapsible_element.py  element_base.py  plain_text_element.py  selector_elements.py  table_element.py  text_input_element.py  utils.py
visuallm/utils/: sanitizer.py
(+31 files in other folders)
