[project]
name = "visuallm"
version = "0.4.4"
authors = [
  { name="Frantisek Trebuna (gortibaldik)", email="ferotre@gmail.com" },
]
description = "Visualization tool for various generation tasks on Language Models. "
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "Flask>=2.3.1",
    "Flask-Cors>=3.0.10"
]

[project.optional-dependencies]
huggingface=["transformers", "datasets"]

[project.urls]
"Homepage" = "https://github.com/gortibaldik/visuallm"
"Bug Tracker" = "https://github.com/gortibaldik/visuallm/issues"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-dir]
visuallm = "visuallm"


[tool.bumpver]
current_version = "0.4.4"
version_pattern = "MAJOR.MINOR.PATCH"
commit_message = "bump version {old_version} -> {new_version}"
commit = true
tag = true
push = true

[tool.bumpver.file_patterns]
"pyproject.toml" = [
    'current_version = "{version}"',
    'version = "{version}"'
]
"README.md" = [
    "VERSION: `{version}`",
]

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q -s"
testpaths = [
    "tests"
]
pythonpath = "."
markers = [
    "full_app_tests: mark test which needs torch, huggingface, opeani dependencies"
]

[tool.ruff]
target-version = 'py310'
# configure ruff extensions
select = [
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "D",  # pydocstyle
    "E",  # Error
    "F",  # pyflakes
    "I",  # isort
    "ISC", # flake8-implicit-str-concat
    "N",  # pep8-naming
    "PGH",  # pygrep-hooks
    "PTH", # flake8-use-pathlib
    "Q",  # flake8-quotes
    "S",  # bandit
    "SIM",  # flake8-simplify
    "TRY",  # tryceratops
    "UP",  # pyupgrade
    "W",  # Warning
    "YTT", # flake8-2020
]
ignore = [
# TODO: these are about missing docstrings, should be removed
    "D101",
    "D100",
    "D102",
    "D103",
    "D104",
    "D105",
    "D107",
    "D205",
    "D211",
    "D213",
    "D400",
    "D401",
    "D415",
# ------
    "E501", # too long line
    "N803", # naming conventions in visuallm/elements/table_element.py
    "N815", # TODO: regression tests for barchart element
    "TRY003", # each exception should have its own class
    "PGH003", # TODO: mypy
]
[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]
"tests/*" = ["S101"]
